<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ListeDossiersSavTrieeActivity">

    <LinearLayout
        android:id="@+id/linear_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.ListeDossiersSAVActivity"
        android:orientation="vertical"
        android:isScrollContainer="true">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/titreListeDossierSAVTrie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bordureformulaireconnexion"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:isScrollContainer="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="-2dp"
                android:background="@color/colorPrimary"
                android:text="@string/titre_ListeDossierClient"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/noir"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bordureformulaireconnexion"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:context=".activity.ListeDossiersSAVActivity">

            <LinearLayout
                android:id="@+id/linearL_nombreDossierSav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/label_nombreDossierSav"
                    android:layout_width="100dp"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp"
                    android:text="@string/nombreDossiersSav"
                    />

                <TextView
                    android:id="@+id/nombreDossierSav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearL_nomSociete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                app:layout_constraintTop_toBottomOf="@+id/linearL_nombreDossierSav"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/label_nomSociete"
                    android:layout_width="100dp"
                    android:layout_marginTop="10dp"
                    android:padding="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp"
                    android:text="@string/nom_client"
                    />

                <TextView
                    android:id="@+id/nomSocieteSaisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearL_codePostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:layout_marginBottom="1dp"
                app:layout_constraintTop_toBottomOf="@+id/linearL_nomSociete"
                tools:ignore="MissingConstraints">


                <TextView
                    android:id="@+id/label_codePostal"
                    android:layout_width="100dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp"
                    android:padding="2dp"
                    android:layout_height="wrap_content"
                    android:text="@string/code_postal"
                    app:layout_constraintTop_toBottomOf="@+id/nomSocieteSaisi" />

                <TextView
                    android:id="@+id/codePostalSaisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/noir"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@+id/msg_erreur_numeroDossier" />
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/bordureformulaireconnexion"
            android:padding="10dp"
            android:layout_gravity="center"
            android:scrollbars="vertical" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="retourListeDossiers"
            android:text="@string/retour_btn"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="OnClick" />


    </LinearLayout>
</ScrollView>